k8s/1grafana/31-deployment-grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: hobb-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana-container
        image: registry.io.bb.com.br:3389/hobb/grafana:0.0.1
        ports:
        - containerPort: 3000
          name: service
        volumeMounts:
          - name: data
            mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: grafana-pvc
