k8s/1grafana/41-ingress-interno-grafana.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: hobb-api
  name: monitor-ingress-http
  annotations:
    kubernetes.io/ingress.class: "nginx-interno"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  rules:
  - host: monitor.hobb.io.bb.com.br
    http:
      paths:
      - backend:
          serviceName: grafana-service
          servicePort: 80
  tls:
  - secretName: hobb-io-tls
    hosts:
    - monitor.hobb.io.bb.com.br
